--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <sourceJdk>1.8</sourceJdk>
         <targetJdk>1.8</targetJdk>
         <java.version>1.8</java.version>
+                   
+           <maven.compiler.source>1.6</maven.compiler.source>
+           <maven.compiler.target>1.6</maven.compiler.target>
         <github.account>wakaleo</github.account>
         <thucydides.version>1.8.4</thucydides.version>
         <jelastic.context>gameoflife</jelastic.context>
@@ -39,7 +42,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.11</version>
                 <configuration>
                     <skip>true</skip>
                     <forkMode>once</forkMode>
